<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/etEmail"
            style="@style/Simple_Edittext_Style_"
            android:hint="@string/txt_email"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            style="@style/Simple_Edittext_Style_"
            android:inputType="textPassword"
            android:hint="@string/txt_password"/>


    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:visibility="gone"
        />


    <TextView
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/snackbarview"/>
</LinearLayout>